Rename plugin from MeetingSync to MeetingMind
- Updated all references in code, configs, docs, and tests
- New plugin ID: meetingmind
- Updated CSS class names
- Updated URLs to meetingmind.app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meetingsync",
+  "name": "meetingmind",
   "version": "0.1.0",
   "description": "Automatically import meeting transcripts into your vault with AI-powered enrichment and intelligent auto-linking",
   "main": "main.js",
