--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "meetingsync",
-  "name": "MeetingSync",
+  "id": "meetingmind",
+  "name": "MeetingMind",
   "version": "0.1.0",
   "minAppVersion": "1.4.0",
   "description": "Automatically import meeting transcripts into your vault with AI-powered enrichment and intelligent auto-linking",
