--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "MeetingMind",
   "version": "1.0.0",
   "minAppVersion": "1.4.0",
-  "description": "Import meeting transcripts with AI summaries, action items, and auto-linking to your vault",
+  "description": "Import meeting transcripts with AI summaries, action items, and auto-linking to your vault.",
   "author": "Patrick Tumbucon",
   "authorUrl": "https://github.com/pattynextdoor",
   "fundingUrl": "https://tumbucon.gumroad.com/l/meetingmind-pro",
