--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "node esbuild.config.mjs",
     "build": "tsc -noEmit --project tsconfig.json && node esbuild.config.mjs production",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
@@ -20,13 +23,16 @@
   "author": "Patrick",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.19.8",
     "eslint": "^9.39.2",
+    "jest": "^29.7.0",
     "obsidian": "latest",
+    "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "typescript-eslint": "^8.50.0"
