Add explicit type-check script for better clarity
- Extract type checking into separate 'type-check' script
- Build command now explicitly calls type-check first
- Makes it easier to run type checking independently
- Ensures local build matches GitHub Actions workflow

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit --project tsconfig.json && node esbuild.config.mjs production",
+    "type-check": "tsc -noEmit --project tsconfig.json",
+    "build": "npm run type-check && node esbuild.config.mjs production",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
