fix: Update Vercel config for VitePress routing
- Simplify docs/vercel.json to basic rewrite rule
- Add root vercel.json with build config for Vercel deployment
- Update _redirects file with comment

This should fix direct navigation to docs routes on Vercel.

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -4,6 +4,8 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "cd docs && npm install && npm run build",
+  "outputDirectory": "docs/.vitepress/dist"
 }
 
