--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.19.8",
     "eslint": "^9.39.2",
+    "eslint-plugin-obsidianmd": "^0.1.9",
     "jest": "^29.7.0",
     "obsidian": "latest",
     "ts-jest": "^29.1.1",
